--- a/index.html
+++ b/index.html
@@ -140,15 +140,18 @@
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="" class="work__img">
+                    <a href="https://muna-lombe.github.io/responsive-plants-website/" class="site__img">
                         <img src="assets/img/plant_site_preview.png" alt="">
                     </a>
                     <!--  -->
-                    <a href="" class="work__img">
+                    <a href="https://muna-lombe.github.io/responsive-watches-website/" class="site__img">
                         <img src="assets/img/watch_site_preview.png" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="https://muna-lombe.github.io/responsive-restaurant-website/" class="site__img">
                         <img src="assets/img/restaurant_site_preview.png" alt="">
+                    </a>
+                    <a href="https://muna-lombe.github.io/katundu-store/" class="site__img">
+                        <img src="assets/img/restaurant_ecomm_preview.png" alt="">
                     </a>
                 </div>
             </section>
